--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,29 @@
 /* Expert Banks */
 /* navbar css */
+body {
+    background: linear-gradient(283.22deg, #DDECFE 0%, #FFFFFF 97.63%);
+    font-family: 'Iowan Old Style';
+    font-style: normal;
+}
 
+.btn-outline-primary {
+    color: #3C3C3C;
+    border-color: #3C3C3C;
+}
+.btn-outline-primary:hover {
+    background-color: rgba(7, 7, 7, 0.14);
+    border-color: rgba(7, 7, 7, 0.0);
+    color: aliceblue;
+}
 
 .logo_brand {
 
-position: absolute;
+/*position: absolute;
 padding-left: 12%;
 width: 154px;
 height: 74px;
 left: 74px;
-top: 0px;
+top: 0px;*/
 
 font-family: 'Iowan Old Style';
 font-style: normal;
@@ -21,24 +35,73 @@ align-items: center;
 color: #000000;
 }
 
+.logo_brand img {
+    margin-right: 10px;
+    
+}
+
 .navbar {
     --bs-navbar-padding-y: 0;
-    padding-left: 12%;
-    background: linear-gradient(283.22deg, #DDECFE 0%, #FFFFFF 97.63%);
+   /* padding-left: 12%; */
+    background: #9EF0CD;
+}
+
+nav li {
+    padding-right: 1rem;
+}
+
+.language-btn {
+    margin-right: 1rem;
+    
+}
+.language-btn button {
+    border-radius: 100%;
+    border: 0px;
+    font-size: 0.7rem;
+    color: #677871; 
+    padding: 0.65rem;
+    background-color: #A6DDC7;
+}
+
+.language-btn button:hover {
+    background-color: #C6E9DB;
 }
 
 .padding-for-header {
-    padding-left: 24%;
+   /* padding-left: 24%;*/
     font-family: 'Iowan Old Style';
 }
-
+.block-1-bg {
+    background-color: #9EF0CD;
+}
 .block1 {
     font-family:'Iowan Old Style';
-    padding-top: 5%;
-    padding-left: 10%;
-    
+    /* padding-top: 5%;
+    padding-left: 10%; */
     text-align: left;
-    background: linear-gradient(283.22deg, #DDECFE 0%, #FFFFFF 97.63%);
+    padding-top: 5rem;
+    
+}
+
+.block-2-bg {
+    background-image: url('../images/block-bg.png');
+}
+
+.block-2 {
+    color: aliceblue;
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+.block-2 button {
+    color: aliceblue;
+    border-color: aliceblue;
+    margin-top: 1rem;
+}
+.block-2 button:hover {
+    background-color: aliceblue;
+    border-color: aliceblue;
+    color: #3C3C3C;
 }
 
 .ref {
@@ -47,13 +110,11 @@ color: #000000;
 }
 
 .block1 p {
-    padding-top: 5%;
-    padding-bottom: 5%;
-    padding-right: 10%;
 }
 
 .blk1 {
     padding-bottom: 5%;
+    padding-right: 3rem;
 }
 
 .blk1_1 {
