--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 /* navbar css */
 
 body {
-    background: linear-gradient(319deg, rgba(255,255,255,1) 0%, rgba(245,245,245,1) 92%);
+    background: #fff;
     font-family: 'Iowan Old Style';
     font-style: normal;
 }
@@ -29,6 +29,25 @@ i {
     background-color: rgba(7, 7, 7, 0.14);
     border-color: rgba(7, 7, 7, 0.0);
     color: aliceblue;
+}
+
+.sub-header {
+    text-align: right;
+    padding: 0.4rem;
+}
+
+.sub-header a {
+    color: aliceblue;
+    font-family: 'Open Sans';
+    font-size: 0.8em;
+    font-weight: 600;
+    letter-spacing: normal;
+    text-decoration: none;
+    padding-bottom: 0.3rem;
+    border-bottom-width: 1px;
+    border-bottom-color: aliceblue;
+    display: inline-block;
+    border-bottom-style: dotted;
 }
 
 .logo_brand {
@@ -84,6 +103,26 @@ nav ul>li {
     padding-right: 1rem;
 }
 
+.dropdown-menu {
+    border: none;
+    border-radius: 0px;
+    font-size: 0.8em;
+    line-height: 3em;
+    width: 300px;
+    padding-bottom: 0px;
+}
+.dropdown-menu li {
+    padding-left: 30px;
+}
+.dropdown-menu li:hover {
+    background-color: #3a8454; 
+}
+
+.dropdown-menu li a:hover {
+    background-color: transparent;
+    color: aliceblue;
+}
+
 .sub-navigation {
     background-color: #e6ebee;
     padding: 0.2rem;
@@ -104,7 +143,7 @@ nav ul>li {
     border-radius: 100%;
     border: 0px;
     font-size: 0.7rem;
-    color: aliceblue; 
+    color: #999; 
     padding-left: 0.1rem;
     padding-left: 0.1rem;
     background-color: transparent;
