--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;1,400&family=Open+Sans:wght@300;400;600;800&display=swap');
 
+@import url('https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css')
+
 body {
     background: #fff;
     font-family: 'Lora', serif;
@@ -30,6 +32,10 @@ body {
     height: 100%;
 }
 
+.card-small {
+    height: auto;
+}
+
 .card-body {
     padding: 7%;
 }
@@ -46,7 +52,7 @@ body {
 
 .card img {
     border-radius: 0px;
-    height: 20%;
+    height: 200px;
     object-fit: cover;
 }
 
@@ -281,6 +287,35 @@ nav ul>li {
 }
 
 
+.services-list li {
+    list-style: none;
+    background-color: transparent;
+    border: 0px;
+}
+
+
+.services-list li:hover {
+    cursor: pointer;
+}
+
+.services-list li:last-child a {
+    border-bottom: 0px;
+}
+
+.list-group-item {
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    line-height: 2.5em;
+    
+}
+
+
+
+
+.list-group-item:hover {
+    color: #999;
+}
 
 .language-btn {
     margin-right: 1rem;
